; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Nat.c_NiAdminMain.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Nat.c_NiAdminMain.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@NiRpcServer = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @NiAdminMain(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %7 = load i32*, i32** %3, align 8
  %8 = icmp eq i32* %7, null
  br i1 %8, label %12, label %9

9:                                                ; preds = %2
  %10 = load i32*, i32** %4, align 8
  %11 = icmp eq i32* %10, null
  br i1 %11, label %12, label %13

12:                                               ; preds = %9, %2
  br label %28

13:                                               ; preds = %9
  %14 = call i32* (...) @NewPack()
  store i32* %14, i32** %6, align 8
  %15 = load i32*, i32** %4, align 8
  %16 = load i32*, i32** %6, align 8
  %17 = call i32 @HttpServerSend(i32* %15, i32* %16)
  %18 = load i32*, i32** %6, align 8
  %19 = call i32 @FreePack(i32* %18)
  %20 = load i32*, i32** %4, align 8
  %21 = load i32, i32* @NiRpcServer, align 4
  %22 = load i32*, i32** %3, align 8
  %23 = call i32* @StartRpcServer(i32* %20, i32 %21, i32* %22)
  store i32* %23, i32** %5, align 8
  %24 = load i32*, i32** %5, align 8
  %25 = call i32 @RpcServer(i32* %24)
  %26 = load i32*, i32** %5, align 8
  %27 = call i32 @RpcFree(i32* %26)
  br label %28

28:                                               ; preds = %13, %12
  ret void
}

declare dso_local i32* @NewPack(...) #1

declare dso_local i32 @HttpServerSend(i32*, i32*) #1

declare dso_local i32 @FreePack(i32*) #1

declare dso_local i32* @StartRpcServer(i32*, i32, i32*) #1

declare dso_local i32 @RpcServer(i32*) #1

declare dso_local i32 @RpcFree(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
